# cosc2753-assignment-1-2026b

./: README.md  assignment-1.ipynb  notebook.ipynb  pyproject.toml  s4034066_predictions.csv  test.csv  train.csv
inputs/: README.md  s4034066_predictions.csv
models/: catboost.pkl  elastic_net_degree_2.pkl  elastic_net_degree_3.pkl  linear_regression.pkl  linear_regression_model.pkl  svr.pkl  xgboost.pkl
pipelines/: preprocess_pipeline.pkl
