[project]
name = "cosc2753-assignment-1-2026b"
version = "0.1.0"
description = "Assignment 1 for COSC2753 - Machine Learning"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "ipykernel",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[dependency-groups]
dev = []
